--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,14 +1,26 @@
 ---
 layout: default
 ---
+<article class="post">
 
-<div class="home">
-  <!-- {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%} -->
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title | escape }}</h1>
+  </header>
 
-  <!-- <h2 class="post-list-heading">Welcome to the Makers All Toolkit!</h2> -->
-  
+  {%- if page.image -%}
+  <div class="main-image">
+    <img src="{{'/assets/images/' | append:  page.image | relative_url }} ">
+    {%- if page.image-citation -%}
+      <div class="main-image-citation">{{ page.image-citation }} </div>
+    {%- endif -%}
+
+  </div>  
+  {%- endif -%}
+
+
+
+  <div class="post-content">
     {{ content }}
+  </div>
 
-</div>
+</article>
